<resources>
    <string name="app_name">YRD Technologies</string>
    <string name="app_name_new">Rx Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_policy">Policy</string>
    <string name="hint_gender">G:</string>
    <string name="hint_number">Mobile number</string>
    <string name="hint_details">Details</string>
    <string name="hint_password">Password</string>
    <string name="hint_age">Age</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="done">Done</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_dcoument">Add your document</string>
    <string name="startDate">Start date  </string>
    <string name="endDate">End date  </string>
</resources>